CAD-1330: CPS notification email changes for civil cases